# CourseSelection

./: README.md  README_en.md  RELEASE.md  展示幻灯片.pptx  文案.docx  无标题项目.aep  未命名.prproj
CourseSelection/: CMakeLists.txt  main.cpp
CourseSelection/DataBase/: DataBroker.cppm  StudentBroker.cppm  TeacherBroker.cppm  TeachingTaskBroker.cppm
CourseSelection/Domain/: StudentRole.cppm
CourseSelection/UiAndLogic/: maincontroller.cppm  studentcontroller.cppm  teachercontroller.cppm  terminalui.cppm
DataBase/: CourseBroker.cppm  DataBroker.cppm  StudentBroker.cppm  TeacherBroker.cppm  TeachingTaskBroker.cppm
UiAndLogic/: coursecontroller.cppm  secretarycontroller.cppm  studentcontroller.cppm  teachercontroller.cppm
doc/dataBase_layer/UML/: DataBase.vpp.bak_000f
doc/dataBase_layer/api/: 数据层说明.md
doc/dataBase_layer/design-doc/: design.md  table_design.md
doc/domain_layer/领域层UML类模型/: 领域层UML类模型文件.vpp
domain/: CMakeLists.txt  Course.cppm  Role.cppm  SecretaryRole.cppm  StudentRole.cppm  TeacherRole.cppm  TeachingTask.cppm
初始化/: init_school_data.sql  初始化数据库.sh  动态库创建.sh  动态库移除.sh  执行.sh
音频素材/ljh/: L心得体会.m4a  L难点1.m4a  L难点2.m4a  L难点3.m4a  L难点4.m4a  L难点5.m4a
音频素材/wyc/: 新录音 1.m4a  新录音 2.m4a  新录音 3.m4a  新录音 4.m4a
